--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,4 +10,22 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true">
     </Button>
+
+    <TextView
+        android:id="@+id/text_box"
+        android:layout_width="wrap_content"
+        android:layout_height="167dp"
+        android:layout_alignStart="@+id/btn_press"
+        android:layout_alignLeft="@+id/btn_press"
+        android:layout_alignEnd="@+id/btn_press"
+        android:layout_alignRight="@+id/btn_press"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="-122dp"
+        android:layout_marginLeft="-122dp"
+        android:layout_marginEnd="-119dp"
+        android:layout_marginRight="-119dp"
+        android:layout_marginBottom="85dp"
+        android:width="400dp"
+        android:height="300dp"
+        android:text="Hello I am text box" />
 </RelativeLayout>
