--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,56 +1,222 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scrollView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <Button
-        android:id="@+id/btn_press"
-        android:text="@string/press"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true">
-    </Button>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="10"
+    android:background="@color/backgroundColor"
+    tools:context="com.example.animesuggest.HomeFragment">
 
-    <TextView
-        android:id="@+id/text_box"
-        android:layout_width="wrap_content"
-        android:layout_height="167dp"
-        android:layout_alignStart="@+id/btn_press"
-        android:layout_alignLeft="@+id/btn_press"
-        android:layout_alignEnd="@+id/btn_press"
-        android:layout_alignRight="@+id/btn_press"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="-122dp"
-        android:layout_marginLeft="-122dp"
-        android:layout_marginEnd="-119dp"
-        android:layout_marginRight="-119dp"
-        android:layout_marginBottom="85dp"
-        android:width="400dp"
-        android:height="300dp"
-        android:text="Hello I am text box" />
+    <RelativeLayout
+        android:layout_weight="0.5"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_width="300dp"
+        android:layout_height="0dp">
 
-    <ImageView
-        android:id="@+id/animeImage"
-        android:layout_width="173dp"
-        android:layout_height="212dp"
-        android:layout_above="@+id/btn_press"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="54dp"
-        android:layout_marginEnd="116dp"
-        android:layout_marginRight="116dp"
-        android:layout_marginBottom="76dp"
-        tools:srcCompat="@tools:sample/avatars" />
-</RelativeLayout>
-</ScrollView>
+        <TextView
+            android:id="@+id/textPOPULAR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/popular_this_season"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            />
+
+    </RelativeLayout>
+
+    <GridLayout
+        android:columnCount="4"
+        android:rowCount="1"
+        android:alignmentMode="alignMargins"
+        android:columnOrderPreserved="false"
+        android:layout_weight="3"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="20dp"
+        >
+
+        <!-- Row 1  -->
+        <!-- Column 1-->
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_marginRight="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardBackgroundColor="@color/backgroundColor"
+            >
+            <LinearLayout
+                android:layout_marginTop="0dp"
+                android:layout_margin="0dp"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+
+                <com.joooonho.SelectableRoundedImageView
+                    android:layout_height="200dip"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/kaguya"
+                    android:scaleType="centerCrop"
+                    app:sriv_left_bottom_corner_radius="48dp"
+                    app:sriv_right_bottom_corner_radius="16dp"
+                    app:sriv_border_width="2dip"
+                    app:sriv_oval="true"/>
+
+                    <TextView
+                        android:text="Kaguya-sama wa Kokurasetai?: Tensai-tachi no Renai ..."
+                        android:layout_width="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/cardview_dark_background"
+                        android:textSize="10dp" />
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- Column 2-->
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_marginRight="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardBackgroundColor="@color/backgroundColor"
+            >
+            <LinearLayout
+                android:layout_marginTop="0dp"
+                android:layout_margin="0dp"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+
+                <com.joooonho.SelectableRoundedImageView
+                    android:layout_height="200dip"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/towerofgod"
+                    android:scaleType="centerCrop"
+                    app:sriv_left_bottom_corner_radius="48dp"
+                    app:sriv_right_bottom_corner_radius="16dp"
+                    app:sriv_border_width="2dip"
+                    app:sriv_oval="true"/>
+
+                <TextView
+                    android:text="Kami no Tou: Tower of God"
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/cardview_dark_background"
+                    android:textSize="10dp" />
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- Column 3-->
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_marginRight="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardBackgroundColor="@color/backgroundColor"
+            >
+            <LinearLayout
+                android:layout_marginTop="0dp"
+                android:layout_margin="0dp"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+
+                <com.joooonho.SelectableRoundedImageView
+                    android:layout_height="200dip"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/kaguya"
+                    android:scaleType="centerCrop"
+                    app:sriv_left_bottom_corner_radius="48dp"
+                    app:sriv_right_bottom_corner_radius="16dp"
+                    app:sriv_border_width="2dip"
+                    app:sriv_oval="true"/>
+
+                <TextView
+                    android:text="Kaguya-sama wa Kokurasetai?: Tensai-tachi no Renai ..."
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/cardview_dark_background"
+                    android:textSize="10dp" />
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+        <!-- Column 4-->
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_marginRight="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardBackgroundColor="@color/backgroundColor"
+            >
+            <LinearLayout
+                android:layout_marginTop="0dp"
+                android:layout_margin="0dp"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+
+                <com.joooonho.SelectableRoundedImageView
+                    android:layout_height="200dip"
+                    android:layout_width="wrap_content"
+                    android:src="@drawable/kaguya"
+                    android:scaleType="centerCrop"
+                    app:sriv_left_bottom_corner_radius="48dp"
+                    app:sriv_right_bottom_corner_radius="16dp"
+                    app:sriv_border_width="2dip"
+                    app:sriv_oval="true"/>
+
+                <TextView
+                    android:text="Kaguya-sama wa Kokurasetai?: Tensai-tachi no Renai ..."
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/cardview_dark_background"
+                    android:textSize="10dp" />
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+
+
+
+    </GridLayout>
+
+
+
+</LinearLayout>
