--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorGray">#D7D7D7</color>
+    <color name="backgroundColor">#E9EDF3</color>
+    <color name="black">#000000</color>
 </resources>
