--- a/app/src/main/res/layout/fragment_animepage.xml
+++ b/app/src/main/res/layout/fragment_animepage.xml
@@ -49,28 +49,77 @@
             <TextView
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="350dp"
+                android:layout_marginStart="250dp"
                 android:layout_marginTop="-350dp"
                 android:layout_marginEnd="100dp"
-
                 android:text="@string/genre"
+                android:textSize="12dp" />
+
+            <TextView
+                android:id="@+id/genredisplay"
+                android:layout_width="189dp"
+                android:layout_height="62dp"
+                android:layout_marginStart="250dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="-12dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="250dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="100dp"
+                android:text="@string/air_date"
+                android:textSize="12dp" />
+
+            <TextView
+                android:id="@+id/airdatedisplay"
+                android:layout_width="72dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="250dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="80dp" />
+
+            <TextView
+                android:layout_width="65dp"
+                android:layout_height="16dp"
+                android:layout_gravity=""
+                android:layout_marginStart="350dp"
+                android:layout_marginTop="-64dp"
+                android:layout_marginEnd="100dp"
+                android:text="@string/end_date"
+                android:textSize="12dp" />
+
+            <TextView
+                android:id="@+id/enddatedisplay"
+                android:layout_width="64dp"
+                android:layout_height="46dp"
+                android:layout_marginStart="350dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginEnd="8dp" />
+
+            <TextView
+                android:layout_width="45dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="250dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="141dp"
+                android:text="@string/score"
                 android:textSize="12dp" />
 
             <TextView
                 android:id="@+id/scoredisplay"
                 android:layout_width="50dp"
                 android:layout_height="45dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="302dp"
-                android:layout_marginEnd="127dp" />
+                android:layout_marginStart="250dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginEnd="80dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="277dp"
+                android:layout_marginStart="350dp"
+                android:layout_marginTop="-64dp"
                 android:layout_marginEnd="38dp"
                 android:text="@string/rank"
                 android:textSize="12dp" />
@@ -79,131 +128,59 @@
                 android:id="@+id/rankdisplay"
                 android:layout_width="87dp"
                 android:layout_height="45dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="301dp"
+                android:layout_marginStart="350dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginEnd="-12dp" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="185dp"
-                android:layout_marginEnd="12dp"
-                android:text="@string/end_date"
-                android:textSize="12dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="185dp"
-                android:layout_marginEnd="126dp"
-                android:text="@string/air_date"
-                android:textSize="12dp" />
-
-
-            <View
-                android:layout_width="300dp"
-                android:layout_height="1dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="55dp"
-                android:layout_marginBottom="214dp"
-                android:background="@android:color/darker_gray" />
 
             <TextView
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="250dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="153dp"
-                android:paddingLeft="10dp"
                 android:text="@string/japanese"
                 android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/displaynative"
                 android:layout_width="145dp"
-                android:layout_height="70dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="10dp"
+                android:layout_height="111dp"
+                android:layout_marginStart="250dp"
+                android:layout_marginTop="-150dp"
                 android:layout_marginBottom="71dp"
-                android:paddingLeft="10dp"
-                android:textSize="15dp" />
+                android:textSize="15sp" />
+            <View
+                android:layout_width="300dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="250dp"
+                android:layout_marginTop="0dp"
+                android:background="@android:color/darker_gray" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="178dp"
-                android:layout_marginBottom="158dp"
-                android:paddingLeft="10dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginBottom="3dp"
+                android:layout_marginTop="-205dp"
                 android:text="@string/description"
                 android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/displaydescription"
-                android:layout_width="219dp"
-                android:layout_height="152dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
+                android:layout_width="400dp"
+                android:layout_height="358dp"
+                android:layout_marginStart="15dp"
                 android:layout_marginEnd="29dp"
                 android:layout_marginBottom="0dp" />
 
-            <Button
-                android:id="@+id/button_test"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="439dp"
-                android:layout_marginEnd="27dp"
-                android:text="Button" />
-
-            <TextView
-                android:id="@+id/genredisplay"
-                android:layout_width="189dp"
-                android:layout_height="62dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="110dp"
-                android:layout_marginEnd="-12dp" />
-
-            <TextView
-                android:id="@+id/airdatedisplay"
-                android:layout_width="87dp"
-                android:layout_height="45dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="205dp"
-                android:layout_marginEnd="91dp" />
-
-            <TextView
-                android:id="@+id/enddatedisplay"
-                android:layout_width="50dp"
-                android:layout_height="45dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="203dp"
-                android:layout_marginEnd="8dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="279dp"
-                android:layout_marginEnd="141dp"
-                android:text="@string/score"
-                android:textSize="12dp" />
+<!--            <Button-->
+<!--                android:id="@+id/button_test"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="4dp"-->
+<!--                android:layout_marginEnd="27dp"-->
+<!--                android:text="Button" />-->
 
 
         </LinearLayout>
