--- a/app/src/main/res/layout/fragment_animepage.xml
+++ b/app/src/main/res/layout/fragment_animepage.xml
@@ -19,6 +19,7 @@
         tools:context=".AnimePageFragment">
 
         <LinearLayout
+            android:id="@+id/anime_background_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/backgroundColor"
