--- a/app/src/main/res/layout/fragment_animepage.xml
+++ b/app/src/main/res/layout/fragment_animepage.xml
@@ -44,7 +44,7 @@
                 android:maxWidth="230dp"
                 android:maxHeight="350dp"
                 android:minWidth="230dp"
-                android:minHeight="350dp"/>
+                android:minHeight="350dp" />
 
             <TextView
                 android:layout_width="40dp"
@@ -149,40 +149,76 @@
                 android:layout_marginTop="-150dp"
                 android:layout_marginBottom="71dp"
                 android:textSize="15sp" />
+
             <View
                 android:layout_width="300dp"
                 android:layout_height="1dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="250dp"
-                android:layout_marginTop="0dp"
+                android:layout_marginTop="-60dp"
+                android:layout_marginBottom="230dp"
                 android:background="@android:color/darker_gray" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginBottom="3dp"
                 android:layout_marginTop="-205dp"
+                android:layout_marginBottom="3dp"
                 android:text="@string/description"
                 android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/displaydescription"
                 android:layout_width="400dp"
-                android:layout_height="358dp"
+                android:layout_height="300dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="29dp"
                 android:layout_marginBottom="0dp" />
 
-<!--            <Button-->
-<!--                android:id="@+id/button_test"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="4dp"-->
-<!--                android:layout_marginEnd="27dp"-->
-<!--                android:text="Button" />-->
+            <!--            <LinearLayout-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="600dp"-->
+            <!--                android:orientation="horizontal"-->
+            <!--                android:layout_marginTop="10dp"-->
+            <!--                android:layout_marginRight="5dp"-->
+            <!--                android:layout_marginLeft="10dp"-->
+            <!--                >-->
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
 
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/suggestions"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toTopOf="@+id/recyclerview_animefrag_id"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.03"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview_animefrag_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="900dp"
+                    android:layout_gravity="center|center_vertical"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView">
+
+                </androidx.recyclerview.widget.RecyclerView>
+
+                <!--            </LinearLayout>-->
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
